fix(ui): Wrap long breadcrumb paths

--- a/app/core/static/core/css/style.css
+++ b/app/core/static/core/css/style.css
@@ -228,6 +228,7 @@ a::selection {
 
 .path {
   color: var(--blue-bright);
+  word-wrap: break-word;
 }
 
 .path::selection {
